Some spacing fixes, edit share texts

--- a/assets/css/application-minimal.css
+++ b/assets/css/application-minimal.css
@@ -17,6 +17,8 @@ h3 {
 h2 {
     color: #000;
     font-size: 2em;
+    padding-top: 1em;
+    padding-bottom: 0.6em;
 }
 
 h4 {
@@ -80,6 +82,10 @@ a:hover {
 
 button.btn {
     border-radius: 0;
+}
+
+.gallery {
+    margin-top: 20px;
 }
 
 .icon {
